--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -9,24 +9,27 @@
   }
   .loader-box > .loader {
     position: absolute;
-    margin: auto;
-    left: 0;
-    right: 0;
+    margin:auto;
+    background-color: blue;
+    top:0;
     bottom: 0;
-    top: 0;
-    border: 6px solid #f3f3f3;
-    border-top: 6px solid #000;
-    width: 1em;
+    left:0;
+    right: 0;
+    border-radius: 50%;
+    width: 100px;
     height: 100px;
     animation: spin 2s linear infinite;
   }
   
   @keyframes spin {
     0% {
-      transform: rotate(0deg);
+      transform: scale(0.2)
+    }
+    50%{
+      transform: scale(0.5)
     }
     100% {
-      transform: rotate(360deg);
+      transform: scale(0.8);
     }
   }
   
