--- a/src/container/App/app.css
+++ b/src/container/App/app.css
@@ -12,6 +12,7 @@
   position: relative;
   display: flex;
   border-radius: 20px;
+  flex-direction: row;
 }
 
 @media screen and (max-width:600px){
