--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -10,7 +10,7 @@
   .loader-box > .loader {
     position: absolute;
     margin:auto;
-    background-color: blue;
+    background-color: rgb(104, 104, 211);
     top:0;
     bottom: 0;
     left:0;
@@ -25,11 +25,20 @@
     0% {
       transform: scale(0.2)
     }
-    50%{
-      transform: scale(0.5)
+    20%{
+      transform: scale(0.4)
+    }
+    40%{
+      transform: scale(0.6)
+    }
+    60%{
+      transform: scale(0.8)
+    }
+    80%{
+      transform: scale(0.9)
     }
     100% {
-      transform: scale(0.8);
+      transform: scale(1);
     }
   }
   
