--- a/src/container/input/inputControl.css
+++ b/src/container/input/inputControl.css
@@ -1,67 +1,4 @@
-.input-box{
-  position: relative;
-  margin-bottom:20px;
-}
-.input-box-label{
-    display: block;
-    margin: 3px;
-}
-.input-box-area{
-    display: inline-block;
-    width:100%;
-    margin-top:20px;
-}
-.input-text{
-    display: inline;
-    margin:3px;
-    
-}
-.input-text-cross{
-     display: inline;
+.form-area{
+    padding:20px;
 }
 
-.input-box-button button{
-    margin:8px;
-    box-shadow: 1px 1px 1px gray;
-
-}
-
-.input-box-button button:hover{
-    box-shadow: 2px 2px 2px gray;
-    
-}
-
-@media screen and (max-width:700px){
-    .input-text{
-        width:80%;
-        
-    }
-}
-
-.submit-info ,.reset-info{
-    width:100px;
-    background-color: skyblue;
-    text-shadow: 2px gray;
-    color:white;
-    height: 30px;
-    font-weight: bold;
-    border: 1px solid white;
-    border-radius: 5%;
-}
-
-.submit-info:hover{
-    border-radius: 10%;
-    box-shadow: 2px 2px 2px 2px white;
-}
-
-.reset-info{
-  background-color:gray;
-}
-
-.errorOutline {
-    border: 1px solid red;
-}
-input{  
-    width:70%;
-    padding: 2px;
-}
