--- a/src/container/App/app.css
+++ b/src/container/App/app.css
@@ -5,20 +5,26 @@
 }
 
 .content{
-  height:95%;
-  box-shadow: 5px 5px 5px 8px gray;
+  height:100%;
+  box-shadow: -5px -5px 25px -25px gray,5px 5px 25px 5px lightgray;
   border-radius: 20px;
   padding: 0px;
   position: relative;
-  margin-top:10px;
+  margin-top:20px;
 }
 
 .mt-1{
-  margin-bottom:10px;
+  margin-top:5px;
 }
 .mt-2{
-  margin-top:35px;
+  margin-top:10px;
 }
-.mt-0{
-  margin:0px;
+.mt-3{
+ margin-top:15px;
+}
+.mb-1{
+  margin-bottom: 15px;
+}
+.placement{
+  margin-left:-26px;
 }
