--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,4 +1,5 @@
-.loader-box {
+.loader-box,
+.loading-box {
   position: absolute;
   left: 0;
   top: 0;
@@ -6,21 +7,16 @@
   width: 100%;
   height: 100%;
   border-radius: 20px;
-  z-index: 999;
+  z-index: 9999;
 }
 .loading-box {
-  position: absolute;
-  left: 0;
-  top: 0;
   background-color: transparent;
   width: 80%;
   height: 80%;
   margin-left: 10%;
-  border-radius: 20px;
   justify-content: center;
-  z-index: 999;
 }
-.loader-box,
+.loader-box > .loader,
 .loading-box > .loader {
   position: absolute;
   margin: auto;
