--- a/src/components/clearButton/clearButton.css
+++ b/src/components/clearButton/clearButton.css
@@ -1,15 +1,13 @@
 .input-group-addon {
-    background-color: #ffffff;
-    border: unset;
-    font-weight: bold;
-    font-size: 16px;
-    cursor: pointer;
-    visibility: hidden;
-    display: inline;
-    margin:0px; 
-  }
-  
-  .visible {
-    visibility: visible;
-  }
-  
+  background-color: #ffffff;
+  border: unset;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  display: none;
+  margin: 0px;
+}
+
+.visible {
+  display: inline;
+}
