correction in api and css

--- a/src/container/leftPanel/leftPanel.css
+++ b/src/container/leftPanel/leftPanel.css
@@ -1,9 +1,12 @@
+/* mt margin-top  */
 .mt-1 {
   margin-top: 5px;
 }
+
 .mt-3 {
   margin-top: 15px;
 }
+/* mb margin-bottom */
 .mb-1 {
   margin-bottom: 15px;
 }
