Css styling and function naming convention

--- a/src/container/app/app.css
+++ b/src/container/app/app.css
@@ -4,6 +4,7 @@
   font-size: 16px;
 }
 
+/* Content placement  */
 .content {
   height: 100%;
   box-shadow: -5px -5px 25px -25px gray, 5px 5px 25px 5px lightgray;
