--- a/src/container/form/formControl.css
+++ b/src/container/form/formControl.css
@@ -1,14 +1,18 @@
+/*block class for form */
 .form-area {
   padding: 20px;
 }
 
-.placement {
+/* clear button placement*/
+.clear-button-placement {
   margin-left: -26px;
 }
 
+/* margin top */
 .mt-1 {
   margin-top: 5px;
 }
+
 .mt-2 {
   margin-top: 10px;
 }
