--- a/src/container/form/formControl.css
+++ b/src/container/form/formControl.css
@@ -8,7 +8,7 @@
   margin-left: -26px;
 }
 
-/* margin top */
+/*bootstrap css override*/
 .mt-1 {
   margin-top: 5px;
 }
@@ -16,3 +16,4 @@
 .mt-2 {
   margin-top: 10px;
 }
+/*bootstrap css override*/
